// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleAddToCart /> component its snapshot matches story Default 1`] = `
.c1 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c1 svg {
  max-height: 100%;
}

.c0 {
  margin: 1.5rem 0;
}

.c0 button {
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 cds--btn cds--btn--md cds--btn--primary"
      tabindex="0"
      type="button"
    >
      Add to cart
       
      <div
        class="cds--btn__icon"
      >
        <svg
          aria-label="icon"
          fill="currentColor"
          focusable="false"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          size="20"
          viewBox="0 0 32 32"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<SimpleAddToCart /> component its snapshot matches story Disabled 1`] = `
.c1 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c1 svg {
  max-height: 100%;
}

.c0 {
  margin: 1.5rem 0;
}

.c0 button {
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 cds--btn cds--btn--md cds--btn--primary cds--btn--disabled"
      disabled=""
      tabindex="0"
      type="button"
    >
      Add to cart
       
      <div
        class="cds--btn__icon"
      >
        <svg
          aria-label="icon"
          fill="currentColor"
          focusable="false"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          size="20"
          viewBox="0 0 32 32"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        />
      </div>
    </button>
  </div>
</div>
`;
